<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="5dp"
    app:cardCornerRadius="5dp">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="12dp">
        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/img_avatar_itemcard"
            android:layout_width="55dp"
            android:layout_height="55dp"
            android:layout_margin="10dp"
            android:layout_gravity="center"
            tools:src="@android:color/darker_gray"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"/>
        <TextView
            android:id="@+id/txt_name_itemcard"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="8dp"
            android:textSize="16sp"
            android:textStyle="bold"
            android:textColor="@color/colorBlack"
            tools:text="@string/name"
            app:layout_constraintTop_toBottomOf="@id/img_avatar_itemcard"
            app:layout_constraintStart_toStartOf="@id/img_avatar_itemcard"
            app:layout_constraintEnd_toEndOf="@id/img_avatar_itemcard"/>
        <TextView
            android:id="@+id/txt_url_itemcard"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_marginLeft="5dp"
            android:layout_marginStart="5dp"
            android:layout_gravity="center_vertical"
            android:ellipsize="end"
            android:maxLines="1"
            tools:text="@string/url"
            app:layout_constraintTop_toBottomOf="@id/txt_name_itemcard"
            app:layout_constraintStart_toStartOf="@id/txt_name_itemcard"
            app:layout_constraintEnd_toEndOf="@id/txt_name_itemcard"/>
        <Button
            android:id="@+id/btn_showprofile"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/btn_showprofile"
            android:background="@drawable/button_bg"
            app:layout_constraintTop_toBottomOf="@id/txt_url_itemcard"/>
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.cardview.widget.CardView>